--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,12 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.5",
+    "@mui/material": "^6.1.5",
+    "@mui/styled-engine-sc": "^6.1.5",
+    "@mui/x-charts": "^7.22.0",
+    "@mui/x-data-grid": "^7.22.0",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-grid-layout": "^1.5.0",
     "react-hook-form": "^7.53.1",
-    "react-router-dom": "^6.27.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^6.27.0",
+    "styled-components": "^6.1.13",
+    "tailwind-merge": "^2.5.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
