--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "serve dist -p $PORT"
   },
   "dependencies": {
     "@emotion/react": "^11.13.3",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
+    "serve": "^14.2.4",
     "styled-components": "^6.1.13",
     "tailwind-merge": "^2.5.4"
   },
